--- a/app/src/main/res/layout/add_item.xml
+++ b/app/src/main/res/layout/add_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -53,12 +54,27 @@
         android:padding="16dp"
         android:focusable="false" />
 
+    <fragment
+        android:id="@+id/autocomplete_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
+
     <EditText
         android:id="@+id/textLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Location"
-        android:padding="16dp"/>
+        android:padding="16dp"
+        android:focusable="false" />
+
+    <Button
+        android:id="@+id/btnGetCurrentLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GET CURRENT LOCATION"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
